--- a/front-end/requirements.txt
+++ b/front-end/requirements.txt
@@ -1,12 +1,19 @@
 asarPy==1.0.1
 asgiref==3.11.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
 Django==5.0.3
 djangorestframework==3.16.1
+docker==7.1.0
 drf-yasg==1.21.14
+idna==3.11
 inflection==0.5.1
 Markdown==3.10.1
 packaging==26.0
 pytz==2025.2
 PyYAML==6.0.3
+requests==2.32.5
+setuptools==82.0.0
 sqlparse==0.5.5
 uritemplate==4.2.0
+urllib3==2.6.3
